fix: line breaks in middle of words

--- a/app/src/global.scss
+++ b/app/src/global.scss
@@ -204,6 +204,8 @@ body * {
   -moz-user-select: text;
   -ms-user-select: text;
   user-select: text;
+  word-break: keep-all;
+  overflow-wrap: normal;
 }
 
 .alert-radio-group::-webkit-scrollbar {
